--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "jade": "^1.11.0"
   },
   "dependencies": {
+    "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.4"
+    "mongoose": "^4.10.4",
+    "passport-local": "^1.0.0"
   }
 }
