--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
     "express": "^4.15.3",
-    "mongoose": "^4.10.4",
-    "passport-local": "^1.0.0"
+    "mongoose": "^4.10.4"
   }
 }
