--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jade": "^1.11.0"
+    "jade": "^1.11.0",
+    "morgan": "^1.8.2"
   },
   "dependencies": {
     "bcrypt": "^1.0.2",
     "body-parser": "^1.17.2",
+    "cookie-parser": "^1.4.3",
     "express": "^4.15.3",
+    "jsonwebtoken": "^7.4.1",
     "mongoose": "^4.10.4"
   }
 }
