--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "morgan": "^1.8.2"
   },
   "dependencies": {
-    "bcrypt": "^1.0.2",
+    "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
