--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "morgan": "^1.8.2"
   },
   "dependencies": {
+    "angular-flash-alert": "^2.4.0",
     "bcrypt-nodejs": "0.0.3",
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
