--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "A to-do list using angular. This is only for practice",
   "main": "app.js",
   "scripts": {
+    "start": "node app.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
