--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "express": "^4.15.3",
     "express-session": "^1.15.3",
     "mongoose": "^4.10.4",
+    "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
