--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "body-parser": "^1.17.2",
     "bootstrap": "^3.3.7",
     "cookie-parser": "^1.4.3",
+    "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
-    "express-session": "^1.15.3",
     "mongoose": "^4.10.4",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
