--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "express-session": "^1.15.4",
     "jade": "^1.11.0",
     "morgan": "^1.8.2"
   },
@@ -22,7 +23,7 @@
     "cookie-session": "^2.0.0-beta.2",
     "express": "^4.15.3",
     "mongoose": "^4.10.4",
-    "morgan": "^1.8.2",
+    "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0"
   }
