--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "mongoose": "^4.10.4",
     "nodemailer": "^4.0.1",
     "passport": "^0.3.2",
-    "passport-local": "^1.0.0"
+    "passport-local": "^1.0.0",
+    "urlsafe-base64": "^1.0.0"
   }
 }
